tests/ui/traits/suggest-fully-qualified-path-without-adjustment.stderr
error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:45:15
   |
LL |     ref_thing.method();
   |               ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     ref_thing.method();
LL +     <Thing as Method<T>>::method(ref_thing);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:46:15
   |
LL |     ref_thing.by_self();
   |               ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     ref_thing.by_self();
LL +     <&Thing as MethodRef<T>>::by_self(ref_thing);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:49:15
   |
LL |     mut_thing.method();
   |               ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     mut_thing.method();
LL +     <Thing as Method<T>>::method(mut_thing);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:50:15
   |
LL |     mut_thing.mut_method();
   |               ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     mut_thing.mut_method();
LL +     <Thing as Method<T>>::mut_method(mut_thing);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:51:15
   |
LL |     mut_thing.by_self();
   |               ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     mut_thing.by_self();
LL +     <&Thing as MethodRef<T>>::by_self(mut_thing);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:54:14
   |
LL |     deref_to.method();
   |              ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_to.method();
LL +     <Thing as Method<T>>::method(deref_to);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:55:14
   |
LL |     deref_to.mut_method();
   |              ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_to.mut_method();
LL +     <Thing as Method<T>>::mut_method(deref_to);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:56:14
   |
LL |     deref_to.by_self();
   |              ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_to.by_self();
LL +     <&Thing as MethodRef<T>>::by_self(deref_to);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:59:20
   |
LL |     deref_deref_to.method();
   |                    ^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_deref_to.method();
LL +     <Thing as Method<T>>::method(deref_deref_to);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:60:20
   |
LL |     deref_deref_to.mut_method();
   |                    ^^^^^^^^^^
   |
note: multiple `impl`s satisfying `Thing: Method<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:10:1
   |
LL | impl Method<i32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl Method<u32> for Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_deref_to.mut_method();
LL +     <Thing as Method<T>>::mut_method(deref_deref_to);
   |

error[E0283]: type annotations needed
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:61:20
   |
LL |     deref_deref_to.by_self();
   |                    ^^^^^^^
   |
note: multiple `impl`s satisfying `&Thing: MethodRef<_>` found
  --> $DIR/suggest-fully-qualified-path-without-adjustment.rs:23:1
   |
LL | impl MethodRef<i32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | impl MethodRef<u32> for &Thing {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: try using a fully qualified path to specify the expected types
   |
LL -     deref_deref_to.by_self();
LL +     <&Thing as MethodRef<T>>::by_self(deref_deref_to);
   |

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0283`.
